--- a/public/initial-styles.css
+++ b/public/initial-styles.css
@@ -143,6 +143,9 @@ h3, h4 {
 .accordion-content p {
   margin: 15px 0;
 }
+.accordion-content span {
+  font-weight: bold;
+}
 
 .schedule-grid, .speaker-grid {
   display: grid;
