--- a/public/initial-styles.css
+++ b/public/initial-styles.css
@@ -181,10 +181,13 @@ h3, h4 {
   height: 60px;
 }
 
-.session-title {
+.session-title, .session h3 {
+  margin-top: 0;
+  margin-right: 10px;
+  border-bottom: none;
   font-weight: bold;
   font-size: 1.1em;
-  margin-bottom: 5px;
+  margin-bottom: 3px;
 }
 
 .session p {
@@ -205,6 +208,10 @@ h3, h4 {
   top: 10px;
   right: 10px;
   cursor: pointer;
+  appearance: none;
+  border: none;
+  background: none;
+  padding: 0px;
 }
 
 .favorite-btn svg {
